tests/NormalTests/paczka1/small_fuzzy/78774521.err
Error in line 1: SkrA S936 28,8
Error in line 6: Qncc36iMijp A72 66,7
